--- a/src/main/resources/com/example/insurance/MainMenu.fxml
+++ b/src/main/resources/com/example/insurance/MainMenu.fxml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <!--suppress ALL -->
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.MainMenuController">
-        <top>
-            <Pane prefHeight="96.0" prefWidth="1280.0" visible="false" BorderPane.alignment="CENTER" />
-        </top>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurance.MainMenuController">
         <center>
             <TabPane prefHeight="616.0" prefWidth="1280.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="66.0" tabMaxWidth="200.0" tabMinHeight="66.0" tabMinWidth="200.0" BorderPane.alignment="CENTER">
                 <tabs>
@@ -392,7 +402,62 @@
                       </ImageView>
                    </graphic>
                 </Tab>
+            <Tab fx:id="houseTab1" onSelectionChanged="#onTabSelectionChanged" style="-fx-background-color: NULL;" text="Страховой случай">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="1280.0">
+                     <children>
+                        <Label fx:id="Description_house1" alignment="CENTER" contentDisplay="CENTER" layoutX="23.0" prefHeight="30.0" prefWidth="1242.0" textAlignment="RIGHT" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0">
+                           <font>
+                              <Font name="Cascadia Code Regular" size="14.0" />
+                           </font>
+                        </Label>
+                        <TableView fx:id="contracts" layoutX="23.0" layoutY="71.0" prefHeight="302.0" prefWidth="1234.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="23.0">
+                          <columns>
+                            <TableColumn fx:id="id" prefWidth="75.0" text="Номер" />
+                              <TableColumn fx:id="start_date" prefWidth="107.0" text="Дата начала" />
+                              <TableColumn fx:id="validality" prefWidth="121.0" text="Срок" />
+                              <TableColumn fx:id="status" prefWidth="75.0" text="Статус" />
+                              <TableColumn fx:id="agreeButtonColumn" prefWidth="75.0" text="Отправка заявки" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
                 </tabs>
             </TabPane>
         </center>
+   <top>
+      <AnchorPane prefHeight="101.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="79.0" prefWidth="1280.0" spacing="750.0" style="-fx-background-color: #b0c4de;">
+               <children>
+                  <Label text="UNIONINSURANCE" textFill="#3e2a5b">
+                     <font>
+                        <Font name="OCR A Extended" size="44.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Button fx:id="exitButton" mnemonicParsing="false" onAction="#getOut" style="-fx-background-color: null;">
+                     <graphic>
+                        <ImageView fitHeight="61.0" fitWidth="116.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@exit.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </HBox>
+         </children>
+      </AnchorPane>
+   </top>
     </BorderPane>
